Fix: Enable combined search and location filtering in book list